feat: create home section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <title>Kebabs</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- navbar section -->
+    <div id="navbar">
+      <a class="navbar-item home" href="index.html">Anasayfa</a>
+      <a class="navbar-item products" href="products.html">Ürünlerimiz</a>
+      <a class="navbar-item about" href="about.html">Hakkımızda</a>
+    </div>
+
+    <!-- home section -->
+    <div class="block">
+      <p>Kebabs'la Türk Mutfağından Farklı Lezzetler</p>
+    </div>
+  </body>
 </html>
