feat: complete the project

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kebabs</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="about.css" />
   </head>
   <body>
     <!-- navbar section -->
@@ -15,8 +15,24 @@
     </div>
 
     <!-- home section -->
+
     <div class="block">
-      <p>Kebabs'la Türk Mutfağından Farklı Lezzetler</p>
+      <p>Hakkımızda</p>
+    </div>
+    <div class="about-item">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quis
+        tenetur sed amet sunt impedit nam culpa cupiditate? Praesentium non
+        recusandae, facilis iste sequi sed sit possimus nam illo laudantium
+        necessitatibus deleniti iure tenetur quasi distinctio vero ducimus.
+        Atque, veritatis rem repellat quia ad qui cum saepe facere cumque
+        commodi velit soluta, voluptatum vero officia, perspiciatis adipisci?
+        Sed error ut incidunt non delectus eveniet sit quae dignissimos quam
+        earum officiis culpa nesciunt rem mollitia animi in quibusdam nemo ullam
+        velit, enim quis necessitatibus. Facere sint reprehenderit consectetur
+        dolorum cumque hic! Tempora ad iusto inventore quos ullam dolor iure,
+        debitis autem!
+      </p>
     </div>
   </body>
 </html>
